@@ -741,5 +741,5 @@
     "*://html.onlineviewer.net/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.1.6.5"
+  "version": "3.1.6.6"
 }
